--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -229,7 +229,7 @@
                 
                 <!-- Strategic Advisor -->
                 <div class="bg-white rounded-xl overflow-hidden shadow-lg">
-                    <img src="{% static 'images/jatin-bhagat.jpg' %}" 
+                    <img src="{% static 'images/jatin-bhagat.jpeg' %}" 
                          alt="Jatin Bhagat, Strategic Advisor" 
                          class="w-full h-80 object-contain bg-gray-50">
                     <div class="p-6">
